fixed run search overlap

--- a/projects/search/style.css
+++ b/projects/search/style.css
@@ -47,7 +47,7 @@ h1 {
 }
 
 .selected {
-  background-color: aquamarine;
+  background-color: #7ed6df;
 }
 
 .found {
